--- a/build.xml
+++ b/build.xml
@@ -119,8 +119,10 @@
 		<exec executable="${testversion}">
 			<env key="PYTHONPATH" value="${core.path}:${standard.path}:${env.PYTHONPATH}"/>
 			<arg value="run"/>
-			<arg value="--source=${basedir}/lucterios,${core.path}"/>
+			<arg value="--branch"/>
+			<arg value="--source=lucterios"/>
 			<arg value="--omit=${core.path}/lucterios/install/*"/>
+			<arg value="--include=${core.path}/lucterios/CORE/*.py,${core.path}/lucterios/framework/*.py"/>
 			<arg value="./manage_${test.instance}.py"/>
 			<arg value="test"/>
 			<arg value="contacts"/>
