--- a/build.xml
+++ b/build.xml
@@ -136,6 +136,7 @@
 		<move file="coverage.xml" tofile="${testversion}.xml"/>
 		<replaceregexp file="${testversion}.xml" match='name="\..*\.workspace\.lct-core\.lucterios' replace='name="lucterios' byline="true" />
 		<replace file="${testversion}.xml" token='filename="lucterios' value='filename="${basedir}/lucterios' />
+		<replaceregexp file="${testversion}.xml" match="&lt;source&gt;.*&lt;/source&gt;" replace="&lt;source&gt;/&lt;/source&gt;" byline="true" />
 	</target>
 
 	<target name="test_py2" if="python2.present">
