--- a/build.xml
+++ b/build.xml
@@ -91,6 +91,7 @@
 			<arg value="add"/>
 			<arg value="--name=${test.instance}"/>
 			<arg value="--module=lucterios.contacts"/>			
+			<arg value="--instance_path=${basedir}"/>
 		</exec>	
 	</target>	
 
@@ -98,8 +99,9 @@
 		<exec executable="python3">
 			<env key="PYTHONPATH" value="${basedir}:${core.path}:${standard.path}:${env.PYTHONPATH}"/>
 			<arg value="${core.path}/lucterios/install/lucterios-admin.py"/>
-			<arg value="del"/>
+			<arg value="delete"/>
 			<arg value="--name=${test.instance}"/>
+			<arg value="--instance_path=${basedir}"/>
 		</exec>	
 	</target>	
 	
