build - remove egg-info

--- a/build.xml
+++ b/build.xml
@@ -159,7 +159,7 @@
 			<arg value="setup.py"/>
 			<arg value="sdist"/>
 		</exec>	
-		<delete dir="Lucterios_contacts.egg-info"/>
+		<delete dir="lucterios_contacts.egg-info"/>
 	</target>
 	
 </project>	
