--- a/build.xml
+++ b/build.xml
@@ -35,8 +35,10 @@
 	</target>
 
 	<target name="init">
-		<buildnumber />
-		<property name="projet.version.build" value="${build.number}"/>
+		<tstamp>
+			<format property="build.time" pattern="yyMMddHH" unit="hour" />
+		</tstamp>		
+		<property name="projet.version.build" value="${build.time}"/>
 		<echo message="${projet.version.build}" file="lucterios/contacts/build" append="false" />
 		<echo message='&lt;testsuite errors="0" failures="0" name="null test" skips="0" tests="0" time="0"&gt;&lt;/testsuite&gt;'  file="junit_py0.xml" append="false" />
 	</target>
