--- a/build.xml
+++ b/build.xml
@@ -4,16 +4,12 @@
 	<property name="project.packagepath" value="lucterios/contacts" />
 	<property name="project.packagename" value="lucterios.contacts" />
 	<property name="project.name" value="lucterios" />
+	<property name="project.packname" value="lucterios_contacts.egg-info" />
 	<property name="project.pythonpath" value="${standard.path}:${core.path}:${env.PYTHONPATH}" />
 	<property name="project.modules" value="lucterios.contacts" />
 	<property name="project.appli" value="lucterios.standard" />
 	<property name="project.test.source" value="lucterios,${core.path}/lucterios"/>
 	<property name="project.test.omit" value="${core.path}/lucterios/install/*"/>
 	<property name="project.test.include" value="${core.path}/lucterios/CORE/*.py,${core.path}/lucterios/framework/*.py"/>
-    <import file="${core.path}/utils/lib_build.xml"/>
-	
-	<target name="package_del">
-		<delete dir="lucterios_contacts.egg-info"/>
-	</target>
-	
+    <import file="${core.path}/utils/lib_build.xml"/>	
 </project>	
