--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,27 @@
 <project name="Lucterios2.contacts" default="all" basedir=".">
-	<property name="standard.path" value="${basedir}/../lct-standard" />
-	<property name="core.path" value="${basedir}/../lct-core" />
-	<property name="document.path" value="${basedir}/../lct-documents" />
+	<taskdef resource="net/sf/antcontrib/antlib.xml">
+		<classpath>
+			<pathelement location="/usr/share/java/lib/ant-contrib-0.6.jar" />
+		</classpath>
+	</taskdef>
+	<exec executable="python3" outputproperty="packages.path" failifexecutionfails="false" errorproperty="">
+		<arg value="-m" />
+		<arg value="site" />
+		<arg value="--user-site" />
+	</exec>	
+	<if>
+		<available file="${basedir}/../lct-core" />
+		<then>
+			<property name="standard.path" value="${basedir}/../lct-standard" />
+			<property name="core.path" value="${basedir}/../lct-core" />
+			<property name="document.path" value="${basedir}/../lct-documents" />
+		</then>
+		<else>
+			<property name="standard.path" value="${packages.path}" />
+			<property name="core.path" value="${packages.path}" />
+			<property name="document.path" value="${packages.path}" />
+		</else>
+	</if>
 	<property name="project.packagepath" value="lucterios/contacts,lucterios/mailing" />
 	<property name="project.packagename" value="lucterios.contacts lucterios.mailing" />
 	<property name="project.name" value="lucterios" />
@@ -12,5 +32,13 @@
 	<property name="project.test.source" value="lucterios,${core.path}/lucterios" />
 	<property name="project.test.omit" value="${core.path}/lucterios/install/*" />
 	<property name="project.test.include" value="${core.path}/lucterios/CORE/*.py,${core.path}/lucterios/framework/*.py" />
-	<import file="${core.path}/utils/lib_build.xml" />
+	<if>
+		<available file="${basedir}/utils/lib_build.xml" />
+		<then>
+			<import file="${basedir}/utils/lib_build.xml" />
+		</then>
+		<else>
+			<import file="${basedir}/../lct-core/utils/lib_build.xml" />
+		</else>
+	</if>
 </project>
